--- a/index.html
+++ b/index.html
@@ -35,6 +35,37 @@
     </div>
   </header>
 
+  <!-- Hover Info Panel -->
+  <div id="hoverInfoPanel" class="hover-info-panel">
+    <div class="hover-info-header">פרטי משימה</div>
+    <div class="hover-info-content">
+      <div class="hover-info-row">
+        <span class="hover-info-label">משימה:</span>
+        <span class="hover-info-value" id="hoverInfoTitle">-</span>
+      </div>
+      <div class="hover-info-row">
+        <span class="hover-info-label">עובדים:</span>
+        <span class="hover-info-value" id="hoverInfoWorkers">-</span>
+      </div>
+      <div class="hover-info-row">
+        <span class="hover-info-label">מפעל:</span>
+        <span class="hover-info-value" id="hoverInfoFactory">-</span>
+      </div>
+      <div class="hover-info-row">
+        <span class="hover-info-label">התחלה:</span>
+        <span class="hover-info-value" id="hoverInfoStart">-</span>
+      </div>
+      <div class="hover-info-row">
+        <span class="hover-info-label">סיום:</span>
+        <span class="hover-info-value" id="hoverInfoEnd">-</span>
+      </div>
+      <div class="hover-info-row">
+        <span class="hover-info-label">משך:</span>
+        <span class="hover-info-value" id="hoverInfoDuration">-</span>
+      </div>
+    </div>
+  </div>
+
   <!-- Filter Panel (Top, Collapsible) -->
   <div class="filter-top-panel collapsed" id="filterTopPanel">
     <div class="filter-top-header">
